--- a/resources/lang/cn.json
+++ b/resources/lang/cn.json
@@ -1,6 +1,13 @@
 {
     "Login": "登录",
     "Register": "注册",
-
-    "Home": "主页"
+    "Home": "主页",
+    "Password": "密码",
+    "Remember Me": "记住账号",
+    "Reset Password": "重设密码",
+    "Send Password Reset Link": "发送密码重置链接",
+    "Verify Your Email Address": "确认你的邮件地址",
+    "Logout": "登出",
+    "E-Mail Address": "邮件地址",
+    "Confirm Password": "确认密码"
 }
